--- a/index.html
+++ b/index.html
@@ -241,12 +241,16 @@
 			<li>Language Processing in Humans and Machines*</li>
 		</ul>
         <div>*: graduate level</div>
-        <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=145369&s=7' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
+        <div align='center' width='10'>
+            <a><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=145369&s=7' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small>
+            <a href='https://clustrmaps.com/site/1buqk'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=200&t=n&d=UbbmWmlB0k1CKCkENYv8IsOz9NH2gynGPoaUnettRQ4'/></a>
+        </div>
 	</section>
     <div class="footer">
       &copy; Linghai Liu, 2023
     </div>
-    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=UbbmWmlB0k1CKCkENYv8IsOz9NH2gynGPoaUnettRQ4&cl=ffffff&w=a"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
