--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     <section id="introduction" class="content">
         <h4 class="titles"><br>About</h4>
         <div class="h-intro">
-            <div class="selfpic"><img id="selfpic" src="images/self-pic.png"></div>
+            <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 05/02/2023.
+                    Welcome! This page was last updated on 07/20/2023.
                 </p>
                 <p>
-                    My name is Linghai Liu. I am now a senior at Brown University concentrating in Applied Mathematics - Computer Science, advised by Professor Stuart Geman, with an interest in statistical theory and machine learning. </br>
-                    I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
-                    I will start my Ph.D. studies at Yale University Statistics and Data Science in Fall 2023.
+                    My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some relationship to computational neuroscience. 
+                    <br>
+                    I will start my Ph.D. studies at Yale University Statistics & Data Science in Fall 2023. I graduated from Brown University in 2023, with a BSc in Applied Mathematics - Computer Science and BA in Mathematics. 
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
@@ -63,20 +63,10 @@
                 </p>
                 <p>Contact:
                     <ul>
-                        <li>linghai_liu@brown.edu&nbsp;linghai.liu@yale.edu</li>
+                        <li>linghai.liu@yale.edu</li>
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
-                <p>Current Coursework:
-                    <ul>
-                        <li>Theory of Probability II*</li>
-                        <li>Graph Theory</li>
-                        <li>Computer Vision</li>
-                        <li>Advanced Topics in Deep Learning*</li>
-                        <li>Honors Thesis Preparation</li>
-                    </ul>
-                </p>
-                <div>*: graduate level</div>
             </div>
         </div>
         
