--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 07/20/2023.
+                    Welcome! This page was last updated on 08/29/2023.
                 </p>
                 <p>
-                    My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some relationship to computational neuroscience. 
+                    My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some connections to computational neuroscience. 
                     <br>
-                    I will start my Ph.D. studies at Yale University Statistics & Data Science in Fall 2023. I graduated from Brown University in 2023, with a BSc in Applied Mathematics - Computer Science and BA in Mathematics. 
+                    I am now a first year PhD student at Yale University Statistics & Data Science. I graduated from Brown University in 2023, with a BSc in Applied Mathematics - Computer Science and BA in Mathematics. 
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
@@ -67,6 +67,8 @@
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
+                <p>Fall23 Courses: Probability and Bayesian Statistics, Probability Theory, Theory of Statistics, Neural Data Analysis, Intermediate Machine Learning.
+                </p>
             </div>
         </div>
         
@@ -75,18 +77,25 @@
         <h4 class="titles"><br><br>
             Projects
         </h4>
-        <ul>Technical Notes (an ALWAYS ongoing list)
+        <ul>Technical Notes. 
+            <div><b>Disclaimer:</b> These notes may contain errors, and I try to cite every source I consulted while preparing them. Please contact me to correct the errors. Thank you. </div>
             <li>
                 <div>Results when Sampling from a Normal Distribution. </div>
-                <div>Started with a sample from $\mathcal{N}(\mu, \sigma^2)$, I filled in the gap of many proofs that are missing in textbooks: 
+                <div>Started with a sample from $\mathcal{N}(\mu, \sigma^2)$, I filled in the gap of many proofs that are missing in many textbooks: 
                     how to arrive at a $\chi^2$ distribution with proofs of handwavy theorems and lemmas used in textbooks along the way, 
                     how and why to derive $t$-distribution and $F$-distribution and prove their properties, 
                     how they contribute to inference problems, and how they are related to each other and other distributions (e.g. to $\mathcal{N}(0,1)$ and to $\text{Beta}$).
                 </div>
                 <a class="btn btn-primary" role="button" href="docs/normal_samples.pdf" target="_blank">pdf</a>
             </li>
+            <li>
+				<div>(Course Project) <i>Levi-Civita Connections</i>, with Kexin Ding, Luke Hammer, Mattie Ji, and Jiayuan Sheng.</div>
+                <div><i>Instructor: </i>Prof. Jungang Li, MATH1140: Functions of Several Variables II (Differential Manifolds).</div>
+                <div>This is the write-up for our final project, where we mainly consulted the book 黎曼几何初步 by 白正国.</div>
+				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">notes</a>
+			</li>
         </ul>
-		<ul>2022
+		<ul>Other
             <li>
                 <div>Honors Thesis Project, <i>Exploring Topological Structures in Neural Nets</i>.</div>
                 <div><i>Advisor: </i>Prof. Stuart Geman, <i>Reader: </i>Prof. Basilis Gidas</div>
@@ -101,13 +110,6 @@
                 <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">write-up</a>
                 <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a>
 			</li>
-			<li>
-				<div>(Course Project) <i>Levi-Civita Connections</i>, with Kexin Ding, Luke Hammer, Mattie Ji, and Jiayuan Sheng.</div>
-                <div><i>Instructor: </i>Prof. Jungang Li, MATH1140: Functions of Several Variables II (Differential Manifolds).</div>
-				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">notes</a>
-			</li>
-		</ul>
-        <ul>2021
 			<li>
 				<div>
 					Brown University Summer Student Research, <i>Exploring Biologically Plausible Mechanisms to Induce Noise Correlations for Learning</i>, with Niloufar Razmi
@@ -125,42 +127,6 @@
             </li>
             <li>
                 <div>
-                    Brown Mathematical Contest in Modeling (BMCM), <i>Random Assignment of Judges - Model and Measurement</i>, 
-                    with Kailiang Fu and Jingxin Zhang. 
-                </div>
-                <a class="btn btn-primary" role="button" href="docs/BMCM_FLZ_final.pdf" target="_blank">pdf</a>
-            </li>
-        </ul>
-        <ul>2020
-            <li>
-                <div>
-                    (Course Project) <i>A Re-Implementation of Visual Question Answering</i>, 
-                    with Yue Yang, Jacob Yu, and Jayden Yi.
-                </div>
-                <div><i>Course Instructor: </i>Prof. Daniel Ritchie, CSCI1470: Deep Learning.</div>
-                <a class="btn btn-primary" role="button" href="https://devpost.com/software/jkjk" target="_blank">Devpost</a>
-                <a class="btn btn-primary" role="button" href="https://github.com/yangyuegly/cs147_vqa" target="_blank">github</a>
-            </li>
-            <li>
-                <div>
-                    (Course Project) <i>Usage of English Articles among L2 Learners - A corpus study of graded essays from TOEFL</i>, 
-                    with Holly Zheng and D. Springer.
-                </div>
-                <div><i>Course Instructor: </i>Prof. U. Cohen Priva, CLPS1360: Introduction to Corpus Linguistics. </div>
-                <a class="btn btn-primary" role="button" href="docs/Corpus_final_project_without_QA.pdf" target="_blank">pdf</a>
-                <a class="btn btn-primary" role="button" href="docs/Corpus_final_project_with_QA.pdf" target="_blank">pdf(w/ Q&A)</a>
-                <a class="btn btn-primary" role="button" href="https://github.com/hollyyuqizheng/english-l2-learner-corpus" target="_blank">github</a>
-            </li>
-            <li>
-                <div>
-                    (Course Project) <i>Heat Diffusion on Higher Dimensions</i>, 
-                    with Kailiang Fu, Shuyang Song, and Jayden Yi. 
-                </div>
-                <div><i>Course Instructor: </i>Prof. B. Sandstede, APMA0360: Applied Partial Differential Equations I.</div>
-                <a class="btn btn-primary" role="button" href="docs/Heat_Diffusion_on_higher_dimensions.pdf" target="_blank">pdf</a>
-            </li>
-            <li>
-                <div>
                     Brown University Mathematics Project (BUMP), <i>Randomizing</i>, 
                     with George Daccache and Zhiyuan Zhou. 
                 </div>
@@ -168,24 +134,7 @@
                 <a class="btn btn-primary" role="button" href="docs/BUMP_final_report_Randomizing.pdf" target="_blank">pdf</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/BUMP-code" target="_blank">github</a>
             </li>
-            <li>
-                <div>
-                    (Course Project) <i>The Phonological System of Bai</i>. 
-                </div>
-                <div><i>Course Instructor: </i>Prof. U. Cohen Priva, CLPS1310: Phonology. </div>
-                <a class="btn btn-primary" role="button" href="docs/Language_of_Bai_Linghai_Liu.pdf" target="_blank">pdf</a>
-            </li>
-        </ul>
-        <ul>2019
-            <li>
-                <div>
-                    (Course Project) <i>Phonotactic Variations in English Spoken by Cape Verdean Americans in The Ratty</i>, 
-                    with Naotaro Kato, Bryce Massey, and Angie Yang. 
-                </div>
-                <div><i>Course Instructor: </i>Prof. U. Cohen Priva, CLPS0300: Introduction to Linguistics.</div>
-                <a class="btn btn-primary" role="button" href="docs/CLPS 300 Final Essay.pdf" target="_blank">pdf</a>
-            </li>
-        </ul>
+		</ul>
     </section>
 	<section class="content" id="TAexperience">
 		<h4 class="titles"><br><br>Teaching Assistant</h4>
@@ -200,37 +149,6 @@
         <div>*: graduate level</div>
         </ul>
 	</section>
-	<section class="content" id="coursework">
-		<h4 class="titles"><br><br>
-			Coursework
-		</h4>
-		<ul> Mathematics / Applied Mathematics / Computer Science
-			<li>Multivariate Calculus</li>
-			<li>Real Analysis</li>
-			<li>Topological Manifolds</li>
-			<li>Applied Ordinary & Partial Differential Equations</li>
-			<li>Linear Algebra</li>
-			<li>Computational Linear Algebra (Numerical)</li>
-			<li>Abstract Algebra</li>
-			<li>Probability (Intermediate & Measure-Theoretical*)</li>
-			<li>Statistical Inference I & II</li>
-            <li>Statistical Neuroscience*</li>
-			<li>Mathematical Statistics*</li>
-			<li>Recent Applications in Probability and Statistics</li>
-			<li>Pattern Theory</li>
-			<li>Linear Optimization</li>
-			<li>Machine Learning</li>
-			<li>Deep Learning</li>
-			<li>Object-Oriented Programming</li>
-			<li>Data Structures & Algorithms</li>
-		</ul>
-		<ul> Linguistics
-			<li>Human Cognition</li>
-			<li>Phonology</li>
-			<li>Introduction to Corpus Linguistics</li>
-			<li>Language Processing in Humans and Machines*</li>
-		</ul>
-        <div>*: graduate level</div>
         <div align='center' width='10'>
             <a><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=145369&s=7' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small>
             <a href='https://clustrmaps.com/site/1buqk'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=200&t=n&d=UbbmWmlB0k1CKCkENYv8IsOz9NH2gynGPoaUnettRQ4'/></a>
