--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 08/29/2023.
+                    Welcome! This page was last updated on 08/31/2023.
                 </p>
                 <p>
                     My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some connections to computational neuroscience. 
@@ -79,6 +79,12 @@
         </h4>
         <ul>Technical Notes. 
             <div><b>Disclaimer:</b> These notes may contain errors, and I try to cite every source I consulted while preparing them. Please contact me to correct the errors. Thank you. </div>
+            <li>
+                <div>Some Notes on Diffusion Models. </div>
+                <div>This notes were prepared while learning diffusion models from two papers, Ho et al., 2020 (DDPM) and Song et al., 2021 (DDIM). The equations are derived with more details with a consistent notation. 
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/diffusion_models.pdf" target="_blank">pdf</a>
+            </li>
             <li>
                 <div>Results when Sampling from a Normal Distribution. </div>
                 <div>Started with a sample from $\mathcal{N}(\mu, \sigma^2)$, I filled in the gap of many proofs that are missing in many textbooks: 
