--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 08/31/2023.
+                    Welcome! This page was last updated on 02/02/2024.
                 </p>
                 <p>
                     My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some connections to computational neuroscience. 
                     <br>
-                    I am now a first year PhD student at Yale University Statistics & Data Science. I graduated from Brown University in 2023, with a BSc in Applied Mathematics - Computer Science and BA in Mathematics. 
+                    I am now a first year PhD student at Yale University Statistics & Data Science. I graduated from Brown University in 2023, with a BSc in Applied Mathematics - Computer Science and a BA in Mathematics. 
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
@@ -67,7 +67,8 @@
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
-                <p>Fall23 Courses: Probability and Bayesian Statistics, Probability Theory, Theory of Statistics, Neural Data Analysis, Intermediate Machine Learning.
+                <p>
+                    Spring24 Courses: Asymptotic Statistics, Data Analysis, Decision Theory, Information Theory, Stochastic Processes
                 </p>
             </div>
         </div>
@@ -101,19 +102,18 @@
 				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">notes</a>
 			</li>
         </ul>
-		<ul>Other
+		<ul>Projects
             <li>
                 <div>Honors Thesis Project, <i>Exploring Topological Structures in Neural Nets</i>.</div>
                 <div><i>Advisor: </i>Prof. Stuart Geman, <i>Reader: </i>Prof. Basilis Gidas</div>
                 <a class="btn btn-primary" role="button" href="docs/Linghai_Liu_Thesis_Final.pdf" target="_blank">pdf</a>
             </li>
 			<li>
-				<div>(In progress) Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems</i>, 
-                    with Lisa Zhao and Shuaicheng Tong.</div>
+				<div>Emory REU/RET Computational Mathematics for Data Science, <i>Training Implicit Networks for Image Deblurring using Jacobian-Free Backpropagation</i>, 
+                    with Lisa Zhao and Shuaicheng Tong. Funded by National Science Foundation awards DMS-2051019.</div>
                 <div><i>Advisor: </i>Prof. Samy Wu Fung</div>
-                <a class="btn btn-primary" role="button" href="docs/REURET_Poster_Team_JFB.pdf" target="_blank">poster</a>
-                <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">github</a>
-                <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">write-up</a>
+                <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">gitHub</a>
+                <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">pdf</a>
                 <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a>
 			</li>
 			<li>
