--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 02/02/2024.
+                    Welcome! This page was last updated on 02/12/2024.
                 </p>
                 <p>
                     My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some connections to computational neuroscience. 
@@ -110,12 +110,10 @@
             </li>
 			<li>
 				<div>Emory REU/RET Computational Mathematics for Data Science, <i>Training Implicit Networks for Image Deblurring using Jacobian-Free Backpropagation</i>, 
-                    with Lisa Zhao and Shuaicheng Tong. Funded by National Science Foundation awards DMS-2051019.</div>
+                    with Lisa Zhao and Shuaicheng Tong. <a href="https://arxiv.org/abs/2402.02065" target="_blank">https://arxiv.org/abs/2402.02065</a>
+                </div>
                 <div><i>Advisor: </i>Prof. Samy Wu Fung</div>
-                <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">gitHub</a>
-                <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">pdf</a>
-                <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a>
-			</li>
+            </li>
 			<li>
 				<div>
 					Brown University Summer Student Research, <i>Exploring Biologically Plausible Mechanisms to Induce Noise Correlations for Learning</i>, with Niloufar Razmi
