--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 02/12/2024.
+                    Welcome! This page was last updated on 09/05/2024.
                 </p>
                 <p>
                     My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some connections to computational neuroscience. 
@@ -68,7 +68,7 @@
                     </ul>
                 </p>
                 <p>
-                    Spring24 Courses: Asymptotic Statistics, Data Analysis, Decision Theory, Information Theory, Stochastic Processes
+                    Fall24 Courses (Tentative): Statistical Case Studies, Linear Models, Machine Learning with Biomedical Data, Sampling and Optimal Transport.
                 </p>
             </div>
         </div>
@@ -152,6 +152,9 @@
 		<li>APMA1650: Statistical Inference I, Spring 2021. Instructor: Samuel Punshon-Smith</li>
         <div>*: graduate level</div>
         </ul>
+	<ul>Yale University
+		<li>S&DS230/530/PLSC530/ENV757: Data Exploration and Analysis, Fall 2024. Instructor: Ethan Meyers</li>
+	</ul>
 	</section>
         <div align='center' width='10'>
             <a><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=145369&s=7' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small>
