--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 09/05/2024.
+                    Welcome! This page was last updated on 02/19/2025.
                 </p>
                 <p>
                     My name is Linghai Liu. I am broadly interested in statistics, machine learning, and possibly some connections to computational neuroscience. 
@@ -68,7 +68,7 @@
                     </ul>
                 </p>
                 <p>
-                    Fall24 Courses (Tentative): Statistical Case Studies, Linear Models, Machine Learning with Biomedical Data, Sampling and Optimal Transport.
+                    Spring25 Courses: Advanced Optimization Techniques
                 </p>
             </div>
         </div>
@@ -154,6 +154,7 @@
         </ul>
 	<ul>Yale University
 		<li>S&DS230/530/PLSC530/ENV757: Data Exploration and Analysis, Fall 2024. Instructor: Ethan Meyers</li>
+        <li>S&DS242/542: Theory of Statistics, Spring 2025. Instructor: Zhou Fan</li>
 	</ul>
 	</section>
         <div align='center' width='10'>
@@ -162,7 +163,7 @@
         </div>
 	</section>
     <div class="footer">
-      &copy; Linghai Liu, 2023
+      &copy; Linghai Liu, 2025
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
